This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
1/30/19: SEM_3-7-0
1/30/19: Check properties, setting, calibrations for being UTF-8 and accept
that, but give specific message for other non-ASCII encodings.

1/29/19: Made camera setup dialog check frame alignment parameters when align
is turned on and change them if appropriate.

1/29/19: Fixed AutoGainFactors and scaling of Ceta images, broken 5/29/18.

1/25/19: Fixed variable substitution into the string argument of a function
call.

1/25/19: Fixed crash from ReduceImage command.

1/25/19: Fixed preserving walk-up reference during walk-down of bidirectional
series if it does image shift reset or STEM focusing.

* 1/22/19: The one-line script window is now resizable and can contain up to 5
scripts.  The window will reopen on program startup if script windows do.

* 1/22/19: CPU-based frame alignment for K2/K3 is now done through a separate
program to solve memory leaks in DM, allow faster FFTs with Intel libraries,
and eliminate license issues with using FFTW.

1/11/19: Added exposure time parameters for Rio camera.

1/11/19: Added script commands to load or merge a Navigator file, report the
filename, and report if it is open.

1/8/19: Fixed problem moving stage from scope control in continuous mode.

* 1/8/19: Initial processing steps for frame alignment can now be done on the
GPU, which can greatly speed it up for faster cards with enough memory.

1/8/19: Enabled shift buttons for stage movement in scope control dialog when
there is no beam calibration.

1/8/19: Fixed providing extension .jpg for jpeg files.

1/7/19: Buffers can be specified by number or letter in script commands.

* 1/7/19: Added properties for defining entries in a Tools menu for running